--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
                     <p>A simple web application for calculating student grades.</p>
                     <p><a href="https://grade-calculator-nine-dun.vercel.app/" target="_blank" rel="noopener noreferrer">Visit</a></p>
                 </article>
+                <article class="card">
+                    <h3>HTML CV</h3>
+                    <p>A responsive HTML-based curriculum vitae.</p>
+                    <p><a href="https://simple-only-cv-by-espragera-allyza.vercel.app/" target="_blank" rel="noopener noreferrer">Visit</a></p>
             </div>
         </section>
 
